# etheria

./: .gitignore  Dockerfile  LICENSE.mit  README.md  _app.py  app.py  environment.yml  etheria-480312-bb275bf290e9.json  pyproject.toml  requirements.txt  run_streamlit.bat  setup.cfg
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
components/: chart_svg.py
data/: cities.csv  correlations.csv  matrix_hour.csv  matrix_planet.csv
etheria/: __init__.py  astrology.py  cycles.py  exceptions.py  influences.py  interpretations.py  loaders.py  numerology.py  personal_year.py  rules.py  utils.py
etheria/services/: api_client.py  astro_service.py  chart_builder.py  chart_renderer.py  generator_service.py
examples/: sample_cycle_1year.csv  sample_cycle_35years.csv  sample_letter_map.csv  samples_correlations.csv
infra/: docker-compose.yml
pages/: 01_Inicio.py  02_Numerologia.py  04_Cristaloterapia.py  05_Cromoterapia.py  06_Aromaterapia.py  07_Musicoterapia.py  08_Pranaterapia.py  1.Inicio.py  2.Numerologia.py  Astrologia.py  Inicio.py  Numerologia.py  mapa_astral.py
pages/_src/: app_core.py
scripts/: run_local.sh
services/: analysis.py  chakra_panel.py  swisseph_client.py
services/services/: chakra_panel.py
src/: app.py  app_core.py  mapa_astral.py
streamlit/: config.toml
utils/: i18n.py
